--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 libros:[
                     {id: 1, nombre: 'Php', creacion: "Fecha: " + new Date().toLocaleString()},
                     {id: 2, nombre: 'C#', creacion: "Fecha: " + new Date().toLocaleString()},
-                    {id: 3, nombre: 'Pyton en la web developed', creacion: "Fecha: " + new Date().toLocaleString()}
+                    {id: 3, nombre: 'Pyton en la web developed actualidad', creacion: "Fecha: " + new Date().toLocaleString()}
                 ]
             }
         })
